crates/monochange/tests/snapshots/release_record__release_record_command_reports_missing_record_in_history@release_record_command_reports_missing_record_in_history.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
discovery error: no monochange release record found in first-parent ancestry from `HEAD`
