crates/monochange/tests/snapshots/release_record__release_record_command_reports_unresolved_refs@release_record_command_reports_unresolved_refs.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
discovery error: could not resolve ref `missing-tag` to a commit: fatal: Needed a single revision
