crates/monochange/tests/snapshots/release_record__release_record_command_reports_unsupported_schema_version@release_record_command_reports_unsupported_schema_version.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
discovery error: release record in commit [SHA] uses unsupported schema version 0.2; upgrade monochange to read this record
