crates/monochange/tests/snapshots/release_record__release_record_command_walks_first_parent_ancestry_from_head@release_record_command_walks_first_parent_ancestry_from_head.snap
---
source: crates/monochange/tests/release_record.rs
assertion_line: 82
expression: "String::from_utf8(output.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
release record:
  input ref: HEAD
  resolved commit: [SHA]
  record commit: [SHA]
  distance: 2
  version: 1.2.3
  versions:
    - sdk: 1.2.3
  targets:
    - group sdk -> 1.2.3 (tag: v1.2.3)
  packages:
    - monochange
    - monochange_core
  provider: github ifiokjr/monochange
