crates/monochange/tests/snapshots/release_record__tag_release_command_creates_and_pushes_declared_tags@tag_release_command_creates_and_pushes_declared_tags.snap
---
source: crates/monochange/tests/release_record.rs
expression: redacted
---
{
  "distance": 0,
  "dryRun": false,
  "from": "HEAD",
  "push": true,
  "recordCommit": "[SHA]",
  "resolvedFromCommit": "[SHA]",
  "status": "completed",
  "tagResults": [
    {
      "existingCommit": null,
      "operation": "created",
      "tagName": "v1.2.3",
      "targetCommit": "[SHA]"
    }
  ],
  "tags": {
    "sdk": "v1.2.3"
  }
}
