crates/monochange/tests/snapshots/release_record__tag_release_command_dry_run_reports_planned_tags_without_creating_them@tag_release_command_dry_run_reports_planned_tags_without_creating_them.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
release tags:
  from: HEAD
  resolved commit: [SHA]
  record commit: [SHA]
  push: no
  tags:
    - v1.2.3 (existing: missing, target: [SHA]) [planned]
  status: dry-run
