crates/monochange/tests/snapshots/release_record__tag_release_command_is_idempotent_when_tags_already_exist@tag_release_command_is_idempotent_when_tags_already_exist.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(second.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
release tags:
  from: HEAD
  resolved commit: [SHA]
  record commit: [SHA]
  push: yes
  tags:
    - v1.2.3 (existing: [SHA], target: [SHA]) [already_up_to_date]
  status: already-up-to-date
