crates/monochange/tests/snapshots/release_record__tag_release_command_json_snapshots_entire_report@tag_release_command_json_snapshots_entire_report.snap
---
source: crates/monochange/tests/release_record.rs
expression: redacted
---
{
  "distance": 0,
  "dryRun": true,
  "from": "HEAD",
  "push": false,
  "recordCommit": "[SHA]",
  "resolvedFromCommit": "[SHA]",
  "status": "dry_run",
  "tagResults": [
    {
      "existingCommit": null,
      "operation": "planned",
      "tagName": "cli/v2.0.0",
      "targetCommit": "[SHA]"
    },
    {
      "existingCommit": null,
      "operation": "planned",
      "tagName": "v1.2.3",
      "targetCommit": "[SHA]"
    }
  ],
  "tags": {
    "cli": "cli/v2.0.0",
    "sdk": "v1.2.3"
  }
}
