crates/monochange/tests/snapshots/release_record__tag_release_command_rejects_existing_tags_that_point_elsewhere@tag_release_command_rejects_existing_tags_that_point_elsewhere.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
config error: tag `v1.2.3` already points to commit [SHA]; use `mc repair-release` if you need to move an existing release tag
